tests/paczka1/fuzzy1/23753087.err
Error in line 5: vYGIMS58hq S181 79,5
Error in line 10: NcRCx A867 89,62
Error in line 11: NcRCx A867 123,1
Error in line 16: NcRCx A37 65,1
Error in line 33: vYGIMS58hq S682 9y,1
Error in line 29: A37 A37 61,2
